<resources>
    <string name="user_preference_file_name" translatable="false">notification_prefs</string>
    <string name="user_preference_notification_delay_key" translatable="false">notification_delay_key</string>
    <string name="user_preference_show_notification_key" translatable="false">show_notification_key</string>
    <string name="user_preference_reverse_week_key" translatable="false">reverse_week_key</string>
    <string name="user_preference_alarm_switch" translatable="false">alarm_switch</string>
    <string name="user_preference_first_lesson_time" translatable="false">first_lesson_time</string>
    <string name="user_preference_second_lesson_time" translatable="false">second_lesson_time</string>
    <string name="user_preference_third_lesson_time" translatable="false">third_lesson_time</string>
    <string name="user_preference_fourth_lesson_time" translatable="false">fourth_lesson_time</string>
    <string name="update_timetable_key" translatable="false">update_timetable_key</string>
    <string name="change_group_key" translatable="false">change_group_key</string>

    <string name="app_name">Розклад КПI</string>
    <string name="loading">Завантаження…</string>
    <string name="choose_your_group">Оберіть свою групу</string>
    <string name="error">Помилка завантаження</string>
    <string name="enter_group_name">Введіть назву групи</string>
    <string name="first_week">Перший тиждень</string>
    <string name="second_week">Другий тиждень</string>
    <string name="week">тиждень</string>
    <string name="type">Тип</string>
    <string name="teacher">Викладач</string>
    <string name="teachers">Викладачі</string>
    <string name="time">Час</string>
    <string name="location">Розташування</string>
    <string name="timetable">Розклад</string>
    <string name="map">Мапа КПI</string>
    <string name="next_lesson">Наступна пара у</string>
    <string name="notifications">Повідомлення</string>
    <string name="notify_before_fore">Повідомляти перед парою за:</string>
    <string name="fifteen_min">15 хвилин</string>
    <string name="show_notifications">Показувати повідомлення</string>
    <string name="min">хв.</string>
    <string name="settings">Налаштування</string>
    <string name="group">Група</string>
    <string name="change_group">Змінити групу</string>
    <string name="update_timetable">Оновити розклад</string>
    <string name="no_lessons_today">Сьогодні пар немає</string>
    <string name="reverse_group_switch">Якщо тиждень відображається неправильно</string>
    <string name="note">Нотаток</string>
    <string name="feedback_category">Зворотний зв\'язок</string>
    <string name="telegram_link">\@ArtemovAnton</string>
    <string name="email">antoxa2584@gmail.com</string>
    <string name="contact_developer_uri">mailto:antoxa2584@gmail.com</string>
    <string name="no_internet">Відсутній доступ до Інтернету</string>
    <string name="exams_timetable">Розклад екзаменів</string>
    <string name="data_from">Дані розкладу занять представлені з сайту</string>
    <string name="feedback">Зворотній зв\'язок - Telegram</string>
    <string name="stop_alarm">Stop</string>
</resources>
