<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory android:title="@string/group">
        <androidx.preference.Preference
            android:icon="@drawable/ic_cached"
            android:key="@string/update_timetable_key"
            android:title="@string/update_timetable" />
        <androidx.preference.Preference
            android:key="@string/change_group_key"
            android:title="@string/change_group"
            tools:icon="@drawable/ic_cached" />
        <androidx.preference.SwitchPreference
            android:key="@string/user_preference_reverse_week_key"
            app:singleLineTitle="false"
            android:title="@string/reverse_group_switch"
            tools:icon="@drawable/ic_cached" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/notifications">
        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_notifications_none"
            android:key="@string/user_preference_show_notification_key"
            app:singleLineTitle="false"
            android:title="@string/show_notifications" />

        <androidx.preference.ListPreference
            android:defaultValue="15"
            android:entries="@array/delays_text"
            android:entryValues="@array/delays"
            android:key="@string/user_preference_notification_delay_key"
            app:singleLineTitle="false"
            android:summary="@string/fifteen_min"
            android:title="@string/notify_before_fore"
            tools:icon="@drawable/ic_notifications_none" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/feedback_category">
        <androidx.preference.Preference
            android:icon="@drawable/ic_bug_report"
            android:summary="@string/telegram_link"
            android:title="@string/feedback">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/ArtemovAnton" />
        </androidx.preference.Preference>

        <androidx.preference.Preference
            app:singleLineTitle="false"
            android:summary="https://rozklad.org.ua/"
            android:title="@string/data_from"
            tools:icon="@drawable/ic_bug_report">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://rozklad.org.ua/" />
        </androidx.preference.Preference>

        <androidx.preference.Preference
            android:summary="antoxa2584x/Rozklad-KPI-v2"
            android:title="Source code"
            tools:icon="@drawable/ic_bug_report">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/antoxa2584x/Rozklad-KPI-v2" />
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory app:title="Alarm clock settings">
        <androidx.preference.SwitchPreferenceCompat
            app:key="@string/user_preference_alarm_switch"
            app:title="Automatic alarm clock"
            app:summary="Wakes you up depending on when your first lesson starts"/>
        <androidx.preference.Preference
            app:title="First lesson"
            app:key="@string/user_preference_first_lesson_time"
            app:dependency="@string/user_preference_alarm_switch"/>
        <androidx.preference.Preference
            app:title="Second lesson"
            app:key="@string/user_preference_second_lesson_time"
            app:dependency="@string/user_preference_alarm_switch"/>
        <androidx.preference.Preference
            app:title="Third lesson"
            app:key="@string/user_preference_third_lesson_time"
            app:dependency="@string/user_preference_alarm_switch"/>
        <androidx.preference.Preference
            app:title="Forth lesson"
            app:key="@string/user_preference_fourth_lesson_time"
            app:dependency="@string/user_preference_alarm_switch"/>
    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>